# REST

./: pyproject.toml
ecommerce_rest/ecommerce_rest/: settings.py
